--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,3 @@
-<p>welcome works!</p>
+<div>Welcome Mr {{name}}
+ welcome to our awsome App.</div>
+<div> can manage your todos <a routerLink="/todos" > here</a> </div> 
