Adding Bootstrap Framework and Creating Components for Menu and Footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -341,4 +341,6 @@
   </div>  -->
 
 <!-- <app-login> </app-login> -->
+<app-menu></app-menu>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
