Styling Footer and Other Components with CSS and Bootstrap

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,11 @@
-<small  *ngIf="invalidlogin"> {{errormsg}}</small>
+<h1>Login </h1>
+<div class="container">
+
+<div class="alert alert-warning" *ngIf="invalidlogin"> {{errormsg}}
+</div>
 <div> 
 UserName : <input type="text" name="username" [(ngModel)]="username">
 Password :<input type="password" name="password" [(ngModel)]="password">
-<button (click)=handlelogin()>Login</button>
+<button class="btn btn-success" (click)=handlelogin()>Login</button>
+</div>
 </div>
