--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,5 @@
-<div>Welcome Mr {{name}}
- welcome to our awsome App.</div>
-<div> can manage your todos <a routerLink="/todos" > here</a> </div> 
+<H1>WELCOME</H1>
+<div class="container">
+    Welcome Mr {{name}}
+ welcome to our awsome App.
+can manage your todos <a routerLink="/todos" > here</a> </div> 
