--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -342,5 +342,8 @@
 
 <!-- <app-login> </app-login> -->
 <app-menu></app-menu>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
 <app-footer></app-footer>
