--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,2 +1,6 @@
-<BR><BR>
-FOOTER
+<footer class="footer">
+
+    <div class="container">
+       <span class ="text-muted" > All Right Reserved 2020 @YNSL31</span>
+    </div>
+</footer>
