--- a/src/app/lis-todos/lis-todos.component.html
+++ b/src/app/lis-todos/lis-todos.component.html
@@ -1,5 +1,6 @@
-<table border="1">
-    <caption> My Todo's</caption>
+<h1> MY TODOS</h1>
+<div class="container"> 
+<table class="table">
     <thead>
         <tr>
            
@@ -14,3 +15,4 @@
         </tr>
     </thead>
 </table>
+</div>
