Creating an Independent Authentication Service Component

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,12 +2,12 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark"> 
 <div> <a href="#">MY TODO APP</a></div>
 <ul class="navbar-nav">
-    <li><a href="/welcome/ynsl31" class="nav-link"> HOME</a></li>
-    <li> <a href="/todos" class="nav-link" > TODOS</a></li>
+    <li><a routerLink="/welcome/ynsl31" class="nav-link"> HOME</a></li>
+    <li> <a routerLink="/todos" class="nav-link" > TODOS</a></li>
 </ul>
 <ul class="navbar-nav navbar-collapse justify-content-end">
-    <li> <a href="/login" class="nav-link" > LOGIN</a></li>
-    <li> <a href="/logout" class="nav-link" > LOGOUT</a></li>
+    <li> <a routerLink="/login" class="nav-link" > LOGIN</a></li>
+    <li> <a routerLink="/logout" class="nav-link" > LOGOUT</a></li>
 </ul>
     </nav>
     <div> </div>
