--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -3,3 +3,13 @@
     Welcome Mr {{name}}
  welcome to our awsome App.
 can manage your todos <a routerLink="/todos" > here</a> </div> 
+<div class="container">
+<H1></H1>
+<button (click)="getwelcomemsg()" class="btn btn-success"> Get Welcome Message </button>
+
+</div>
+<div class="container" *ngIf="welcomemsg">
+    <H1> Your Costomize Message </H1>
+    {{welcomemsg}}
+    
+    </div>
