Adding Delete Todo Feature to Angular Frontend

--- a/src/app/lis-todos/lis-todos.component.html
+++ b/src/app/lis-todos/lis-todos.component.html
@@ -1,4 +1,6 @@
-<h1> MY TODOS</h1>
+<h1> TODO</h1>
+<div class="alert alert-success" *ngIf="message"> {{message}}
+</div>
 <div class="container"> 
 <table class="table">
     <thead>
@@ -7,11 +9,13 @@
             <th> description</th>
             <th> Target date</th>
             <th> is completed </th>
+            <th> Actions </th>
         </tr>
         <tr *ngFor="let todo of todos">
             <td> {{todo.description}}</td>
             <td> {{todo.date | date }}  </td>
             <td> {{todo.done}} </td>
+            <td> <button (click)="deletTodo(todo.id)" class="btn btn-warning">Delete </button> </td>
         </tr>
     </thead>
 </table>
