--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -5,7 +5,8 @@
 can manage your todos <a routerLink="/todos" > here</a> </div> 
 <div class="container">
 <H1></H1>
-<button (click)="getwelcomemsg()" class="btn btn-success"> Get Welcome Message </button>
+<!-- <button (click)="getwelcomemsg()" class="btn btn-success"> Get Welcome Message </button> -->
+<button (click)="getwelcomemsgwithparam()" class="btn btn-success"> Get Welcome Message </button>
 
 </div>
 <div class="container" *ngIf="welcomemsg">
